@@ -177,11 +177,6 @@ editing source code.
 Make the 'Cut Text' command (normally ^K) cut from the current cursor
 position to the end of the line, instead of cutting the entire line.
 .TP
-.BR \-l ", " \-\-nofollow
-If the file being edited is a symbolic link, replace the link with
-a new file instead of following it.  Good for editing files in
-\fI/tmp\fP, perhaps?
-.TP
 .BR \-m ", " \-\-mouse
 Enable mouse support, if available for your system.  When enabled, mouse
 clicks can be used to place the cursor, set the mark (with a double
