@@ -141,9 +141,6 @@ When reading in a file with ^R, insert it into a new buffer by default.
 .B set noconvert
 Don't convert files from DOS/Mac format.
 .TP
-.B set nofollow
-Don't follow symlinks when writing files.
-.TP
 .B set nohelp
 Don't display the two help lines at the bottom of the screen.
 .TP
