@@ -86,9 +86,6 @@
 ## Don't convert files from DOS/Mac format.
 # set noconvert
 
-## Don't follow symlinks when writing files.
-# set nofollow
-
 ## Don't display the helpful shortcut lists at the bottom of the screen.
 # set nohelp
 
