@@ -484,7 +484,6 @@ enum
     CASE_SENSITIVE,
     CONST_UPDATE,
     NO_HELP,
-    NOFOLLOW_SYMLINKS,
     SUSPEND,
     NO_WRAP,
     AUTOINDENT,
